Opened 8 years ago
Closed 8 years ago
#7149 closed defect (fixed)
Segfault when decoding dash streams
| Reported by: | Thirumalaisamy K | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | dash crash SIGSEGV |
| Cc: | lq@chinaffmpeg.org | Blocked By: | |
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
On MacOS 10.13.4, ffmpeg/ffplay build from latest git results in segfault 11 when reading the dash streams.
Sample Urls:
- http://yt-dash-mse-test.commondatastorage.googleapis.com/media/feelings_vp9-20130806-manifest.mpd
- http://yt-dash-mse-test.commondatastorage.googleapis.com/media/car-20120827-manifest.mpd
My build config is
--enable-static --disable-shared --disable-debug --disable-doc --enable-gpl --enable-version3 --enable-nonfree --enable-pthreads --enable-runtime-cpudetect --pkg-config-flags=--static --extra-version=9e2b4c7ecc --enable-libxml2 --enable-openssl --enable-sdl2 --enable-libvpx --enable-libmp3lame --enable-libopus --enable-libtheora --enable-libvorbis --enable-libx264 --enable-libx265 --enable-libaom --enable-libkvazaar --enable-libfdk-aac --enable-libopencore_amrwb --enable-libopencore_amrnb --enable-libvidstab
Reprodicibility: Always
Regression since the commit 9e2b4c7ecc3014310d01e918800f7f7f36596598
No issues with 0b3c1854cb9893a05564f25594a48947e9a163e9
Change History (4)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | crash SIGSEGV added; segfault 11 removed |
| Priority: | normal → important |
| Reproduced by developer: | set |
comment:4 by , 8 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



From Mac's backtrcae