avformat/dashdec: Fix for ticket 7149 (Segfault when decoding dash streams)

Add NULL pointer check for init_section